Fix submodule URL

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "vendor/micropython"]
 	path = vendor/micropython
-	url = git@github.com:damz/micropython.git
+	url = https://github.com/damz/micropython.git
 	branch = pr/mbedtls
 [submodule "vendor/microdot"]
 	path = vendor/microdot
