--- a/manifest.json
+++ b/manifest.json
@@ -1,27 +1,1 @@
-{
-    "name": "Ribbit Frog Sensor",
-    "version": "4",
-    "builds": [
-        {
-            "chipFamily": "ESP32-S3",
-            "parts": [
-                {
-                    "path": "firmware/bootloader.bin",
-                    "offset": 0
-                },
-                {
-                    "path": "firmware/partition-table.bin",
-                    "offset": 32768
-                },
-                {
-                    "path": "firmware/ota_data_initial.bin",
-                    "offset": 53248
-                },
-                {
-                    "path": "firmware/micropython.bin",
-                    "offset": 65536
-                }
-            ]
-        }
-    ]
-}
+{"name": "Ribbit Frog Sensor", "version": "v0.0.1-43-g6475606", "builds": [{"chipFamily": "ESP32-S3", "parts": [{"path": "firmware/bootloader.bin", "offset": 0}, {"path": "firmware/partition-table.bin", "offset": 32768}, {"path": "firmware/ota_data_initial.bin", "offset": 53248}, {"path": "firmware/micropython.bin", "offset": 65536}]}]}
