using github actions to generate static

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,6 +22,10 @@ jobs:
     - name: Test
       run: |
           make test
+    
+    - name: Generate Local UI
+      run: |
+          make ui
 
     - name: Build
       run: |
